# Sovereign-Engine

./: .dockerignore  .env.example  .gitignore  AGENT_ARCHITECTURE.md  AI_INTEGRATION_README.md  AUTONOMOUS_INFRASTRUCTURE_COMPLETE.md  CONTRIBUTING.md  CONTROL_LOOP_ENFORCER.md  DOCS.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  INFRASTRUCTURE_INTEGRATION.md  LICENSE  NEXT_LEVEL_README.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  PRODUCTION_READY.md  QUICK_REFERENCE.md  README.md  REVENUE_SYSTEM_GUIDE.md  SECURITY.md  backend-agent-prompt.txt  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  render.yaml  setup.sh  tsconfig.json  tsconfig.tsbuildinfo
.github/: CODEOWNERS  dependabot.yml
app/: global-error.tsx  globals.css  layout.tsx  page.tsx
code/: .dockerignore  .env.example  Dockerfile  docker-compose.prod.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh
code/apps/desktop-console/src-tauri/: Cargo.toml  tauri.conf.json
code/apps/desktop-console/src-tauri/capabilities/: default.json
code/apps/desktop-console/src-tauri/src/: main.rs
components/: add-domain-modal.tsx  agent-feed.tsx  animated-number.tsx  app-layout.tsx  control-loop-enforcer-dashboard.tsx  create-campaign-modal.tsx  dashboard-sent-chart.tsx  domain-manager.tsx  empty-state.tsx  executive-view.tsx  header.tsx  next-devtools-off.tsx  next-level-dashboard.tsx  providers.tsx  reply-detail-modal.tsx  self-heal-actions.tsx  sequence-editor.tsx  sidebar.tsx  system-health.tsx  (+4 more)
(+889 files in other folders)
