[package]
name = "sovereign-engine-console"
version = "0.1.0"
description = "Operational control console for Sovereign Engine"
edition = "2021"

[lib]
name = "sovereign_engine_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
